Bug 877351 - Network Panel is broken on RTL UI, r=rcampbell
UltraBlame original commit: 24ed4a0306708e46fe84896350eda006ea0dc33a

--- a/browser/devtools/netmonitor/netmonitor.css
+++ b/browser/devtools/netmonitor/netmonitor.css
@@ -75,6 +75,16 @@ MPL
 *
 /
 #
+toolbar
+-
+labels
+{
+overflow
+:
+hidden
+;
+}
+#
 details
 -
 pane
