--- a/browser/themes/windows/devtools/netmonitor.css
+++ b/browser/themes/windows/devtools/netmonitor.css
@@ -216,6 +216,16 @@ last
 -
 child
 )
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
 .
 requests
 -
@@ -229,6 +239,16 @@ not
 last
 -
 child
+)
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
 )
 {
 -
@@ -255,6 +275,95 @@ box
 -
 shadow
 :
+1px
+0
+0
+hsla
+(
+210
+16
+%
+76
+%
+.
+1
+)
+;
+}
+.
+requests
+-
+menu
+-
+header
+:
+not
+(
+:
+last
+-
+child
+)
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+.
+requests
+-
+menu
+-
+subitem
+:
+not
+(
+:
+last
+-
+child
+)
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+hsla
+(
+210
+8
+%
+5
+%
+.
+25
+)
+;
+box
+-
+shadow
+:
+-
 1px
 0
 0
@@ -1238,12 +1347,6 @@ size
 90
 %
 ;
-text
--
-align
-:
-left
-;
 pointer
 -
 events
@@ -1290,6 +1393,60 @@ layout
 .
 *
 /
+}
+.
+requests
+-
+menu
+-
+timings
+-
+division
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+transform
+-
+origin
+:
+left
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+division
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+-
+origin
+:
+right
+center
+;
 }
 /
 *
@@ -1381,13 +1538,133 @@ requests
 -
 menu
 -
+subitem
+.
+requests
+-
+menu
+-
+waterfall
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+:
+right
+center
+;
+}
+.
+requests
+-
+menu
+-
 timings
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
 {
 transform
 -
 origin
 :
 left
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+-
+origin
+:
+right
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+total
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+transform
+-
+origin
+:
+left
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+total
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+-
+origin
+:
+right
 center
 ;
 }
@@ -1421,13 +1698,6 @@ font
 weight
 :
 600
-;
-transform
--
-origin
-:
-left
-center
 ;
 }
 .
@@ -1475,6 +1745,49 @@ end
 :
 none
 ;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+end
+{
+-
+moz
+-
+border
+-
+start
+:
+none
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+start
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
 border
 -
 radius
@@ -1501,17 +1814,18 @@ timings
 -
 cap
 .
-end
-{
+start
+:
 -
 moz
 -
-border
+locale
 -
-start
-:
-none
-;
+dir
+(
+rtl
+)
+{
 border
 -
 radius
@@ -1526,6 +1840,82 @@ transform
 origin
 :
 left
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+end
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+border
+-
+radius
+:
+0
+4px
+4px
+0
+;
+transform
+-
+origin
+:
+left
+center
+;
+}
+.
+requests
+-
+menu
+-
+timings
+-
+cap
+.
+end
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+border
+-
+radius
+:
+4px
+0
+0
+4px
+;
+transform
+-
+origin
+:
+right
 center
 ;
 }
